--- a/src/views/pages/asian-template.html
+++ b/src/views/pages/asian-template.html
@@ -116,9 +116,9 @@
                                 <div class="content">
                                     <div class="list-item">
                                         <div class="item">
-                                            <div class="accordion" id="accordionExample">
+                                            <div class="accordion" id="accordionExample1">
                                                 <div class="box">
-                                                    <div class="box-header" id="headingOne1">
+                                                    <div class="box-header" id="headingOne12">
                                                         <h4 class="mb-0">
                                                             <div class="btn-item" data-toggle="collapse"
                                                                 data-target="#collapseOne" aria-expanded="true"
@@ -136,7 +136,7 @@
                                                         </h4>
                                                     </div>
                                                     <div id="collapseOne" class="collapse" aria-labelledby="headingOne"
-                                                        data-parent="#accordionExample">
+                                                        data-parent="#accordionExample1">
                                                         <div class="box-body">
                                                             <div class="custom-control custom-checkbox my-1 mr-sm-2">
                                                                 <input type="checkbox" class="custom-control-input"
@@ -200,7 +200,7 @@
                                                         </h4>
                                                     </div>
                                                     <div id="collapseOne3" class="collapse" aria-labelledby="headingOne"
-                                                        data-parent="#accordionExample">
+                                                        data-parent="#accordionExample3">
                                                         <div class="box-body">
                                                             <div class="custom-control custom-checkbox my-1 mr-sm-2">
                                                                 <input type="checkbox" class="custom-control-input"
@@ -246,7 +246,7 @@
                                             </div>
                                         </div>
                                         <div class="item">
-                                            <div class="accordion" id="accordionExample1">
+                                            <div class="accordion" id="accordionExample12">
                                                 <div class="box">
                                                     <div class="box-header" id="headingOne2">
                                                         <h4 class="mb-0">
@@ -266,7 +266,7 @@
                                                         </h4>
                                                     </div>
                                                     <div id="collapseOne1" class="collapse" aria-labelledby="headingOne"
-                                                        data-parent="#accordionExample">
+                                                        data-parent="#accordionExample12">
                                                         <div class="box-body">
                                                             <div class="amount-list-item">
                                                                 <div class="amount-item">
@@ -329,7 +329,7 @@
                                                         </h4>
                                                     </div>
                                                     <div id="collapseOne2" class="collapse" aria-labelledby="headingOne"
-                                                        data-parent="#accordionExample">
+                                                        data-parent="#accordionExample23">
                                                         <div class="box-body">
                                                             <div class="price-product">
                                                                 <div class="title-text">
@@ -372,9 +372,9 @@
                                             </div>
                                         </div>
                                         <div class="item">
-                                            <div class="accordion" id="accordionExample">
+                                            <div class="accordion" id="accordionExample34">
                                                 <div class="box">
-                                                    <div class="box-header" id="headingOne1">
+                                                    <div class="box-header" id="headingOne13">
                                                         <h4 class="mb-0">
                                                             <div class="btn-item" data-toggle="collapse"
                                                                 data-target="#collapseOnet" aria-expanded="true"
@@ -392,7 +392,7 @@
                                                         </h4>
                                                     </div>
                                                     <div id="collapseOnet" class="collapse" aria-labelledby="headingOne"
-                                                        data-parent="#accordionExample">
+                                                        data-parent="#accordionExample34">
                                                         <div class="box-body">
                                                             <div class="custom-control custom-checkbox my-1 mr-sm-2">
                                                                 <input type="checkbox" class="custom-control-input"
@@ -433,7 +433,7 @@
                                             </div>
                                         </div>
                                         <div class="item">
-                                            <div class="accordion" id="accordionExample">
+                                            <div class="accordion" id="accordionExample11">
                                                 <div class="box">
                                                     <div class="box-header" id="headingOne1">
                                                         <h4 class="mb-0">
@@ -453,7 +453,7 @@
                                                         </h4>
                                                     </div>
                                                     <div id="collapseOner" class="collapse" aria-labelledby="headingOne"
-                                                        data-parent="#accordionExample">
+                                                        data-parent="#accordionExample11">
                                                         <div class="box-body">
                                                             <div class="custom-control custom-checkbox my-1 mr-sm-2">
                                                                 <input type="checkbox" class="custom-control-input"
@@ -494,9 +494,9 @@
                                             </div>
                                         </div>
                                         <div class="item">
-                                            <div class="accordion" id="accordionExample">
+                                            <div class="accordion" id="accordionExample22">
                                                 <div class="box">
-                                                    <div class="box-header" id="headingOne1">
+                                                    <div class="box-header" id="headingOne14">
                                                         <h4 class="mb-0">
                                                             <div class="btn-item" data-toggle="collapse"
                                                                 data-target="#collapseOnee" aria-expanded="true"
@@ -514,7 +514,7 @@
                                                         </h4>
                                                     </div>
                                                     <div id="collapseOnee" class="collapse" aria-labelledby="headingOne"
-                                                        data-parent="#accordionExample">
+                                                        data-parent="#accordionExample22">
                                                         <div class="box-body">
                                                             <div class="custom-control custom-checkbox my-1 mr-sm-2">
                                                                 <input type="checkbox" class="custom-control-input"
@@ -555,9 +555,9 @@
                                             </div>
                                         </div>
                                         <div class="item">
-                                            <div class="accordion" id="accordionExample">
+                                            <div class="accordion" id="accordionExample33">
                                                 <div class="box">
-                                                    <div class="box-header" id="headingOne1">
+                                                    <div class="box-header" id="headingOne15">
                                                         <h4 class="mb-0">
                                                             <div class="btn-item" data-toggle="collapse"
                                                                 data-target="#collapseOnew" aria-expanded="true"
@@ -575,7 +575,7 @@
                                                         </h4>
                                                     </div>
                                                     <div id="collapseOnew" class="collapse" aria-labelledby="headingOne"
-                                                        data-parent="#accordionExample">
+                                                        data-parent="#accordionExample33">
                                                         <div class="box-body">
                                                             <div class="custom-control custom-checkbox my-1 mr-sm-2">
                                                                 <input type="checkbox" class="custom-control-input"
@@ -616,9 +616,9 @@
                                             </div>
                                         </div>
                                         <div class="item">
-                                            <div class="accordion" id="accordionExample">
+                                            <div class="accordion" id="accordionExample44">
                                                 <div class="box">
-                                                    <div class="box-header" id="headingOne1">
+                                                    <div class="box-header" id="headingOne16">
                                                         <h4 class="mb-0">
                                                             <div class="btn-item" data-toggle="collapse"
                                                                 data-target="#collapseOneq" aria-expanded="true"
@@ -636,7 +636,7 @@
                                                         </h4>
                                                     </div>
                                                     <div id="collapseOneq" class="collapse" aria-labelledby="headingOne"
-                                                        data-parent="#accordionExample">
+                                                        data-parent="#accordionExample44">
                                                         <div class="box-body">
                                                             <div class="custom-control custom-checkbox my-1 mr-sm-2">
                                                                 <input type="checkbox" class="custom-control-input"
